--- a/src/_themeColor.scss
+++ b/src/_themeColor.scss
@@ -33,3 +33,30 @@ $default-color-hover:rgb(201, 196, 196);
 $default-font-color: rgba(0,0,0,.85);
 $default-font-second-color: rgba(0,0,0,.55);
 
+@mixin OpacityPrimaryColor($opacity) {
+    background-color:rgba(0,189,170,$opacity);
+}
+
+@mixin OpacityWarningColor($opacity) {
+    background-color:rgba(248,180,0,$opacity);
+}
+
+@mixin OpacitySecondColor($opacity) {
+    background-color:rgba(64,0,130,$opacity);
+}
+
+@mixin OpacityDangerColor($opacity) {
+    background-color:rgba(247, 31, 85,$opacity);
+}
+
+@mixin OpacityDefaultColor($opacity) {
+    background-color:rgba(224,224,224,$opacity);
+}
+
+@mixin OpacitySuccessColor($opacity) {
+    background-color:rgba(107,198,0,$opacity);
+}
+
+@mixin OpacityInfoColor($opacity) {
+    background-color:rgba(7,121,228,$opacity);
+}
