--- a/src/_variable.scss
+++ b/src/_variable.scss
@@ -9,3 +9,9 @@ $shadowKeyPenumbraOpacity:0.14;
 $shadowAmbientShadowOpacity:0.12;
 
 $global-prefixCls:'parrot';
+
+//全局文字颜色
+$global-text-color:rgba(0,0,0,.87);
+
+//全局次要颜色
+$global-second-text-color:rgba(0,0,0,.54);
